# Obsidian-Notes

./: 2026-07-07.md  2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  Bell Commander To-Do-List.md  Bugs.md  Commissioning Agent.md  Home.md  New features i want to explore.md  README.md
.obsidian/: workspace-mobile.json  workspace.json
.trash/: Bell Commander To-Do-List.md
Attachments/: Bell Commander Hardware Options.md  Bell Commander Product Plan v0.1.md  bell-commander-demo.jsx  bell-commander-ui-options.html
Code/bellcommander/: README.md  pyproject.toml
Code/bellcommander/bellcommander/config/: schema.py
Code/bellcommander/bellcommander/drivers/: ahm.py  fake.py
Code/bellcommander/bellcommander/engine/: compiler.py  supervisor.py
Code/bellcommander/tests/: test_compiler.py  test_supervisor.py
Inbox/: Inbox.md
Projects/: AHM Reverse Engineering.md  AI Inference Server.md  BNS Field Tools.md  Bell Commander Build Handoff.md  Bell Commander Demo UI.md  Bell Commander Telemetry.md  Bell Commander UI Spec.md  Beyond Bell Commander.md  GLA - Bright Sparx Proposal.md  Home Assistant + Zigbee2MQTT.md  LightShark Projects.md  PiFace Kiosk.md  Rack Builder App.md  Strobe Beacon Spec.md  Tablet Wall Panel.md  The Candle Collection.md  Tooling Docker Host.md
Reference/: ELC Smart Panels.md  NSW 2026 Term Dates.md  Pi Kiosk Config.md
Sites/: Batemans Bay High School.md  Campbelltown PS.md
